# Cldfire_nvml-wrapper

nvml-wrapper/: Cargo.toml
nvml-wrapper-sys/: Cargo.toml
